# pyDFT

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
benchmarks/: __init__.py  benchmark_atoms.py
docs/: developer_manual.md  theoretical_introduction.md  user_manual.md
src/pydft/: __init__.py  __main__.py  cli.py  main.py
src/pydft/api/: __init__.py  __main__.py  app.py  server.py
src/pydft/application/: __init__.py  scf.py
src/pydft/assets/: app.js  index.html  styles.css
src/pydft/backend/: __init__.py  __main__.py  api.py  api_server.py  cli.py  functionals.py  grid.py  models.py  potentials.py  presets.py  radial_solver.py  scf.py
src/pydft/core/: __init__.py  __main__.py  api.py  api_server.py  dft_engine.py  grid.py  hartree_fock.py  models.py  occupations.py  parser.py  presets.py  radial_solver.py  request_mapper.py
src/pydft/frontend/: __init__.py  __main__.py  app.py
src/pydft/frontend/ui/: app.js
src/pydft/gui/: __init__.py  __main__.py  api.py  bridge.py  window.py
src/pydft/gui/assets/: app.js  index.html  styles.css
src/pydft/methods/: __init__.py
src/pydft/methods/atomic/: __init__.py  dft_engine.py  hartree_fock.py  lsda.py  potentials.py
tests/: conftest.py
tests/integration/: test_api.py  test_benchmarks.py  test_cli.py  test_contract_consistency.py
tests/unit/: test_application_scf.py  test_functionals.py  test_grid.py  test_gui_bridge_modes.py  test_hartree_fock.py  test_lsda.py  test_occupations.py  test_parser.py  test_potentials.py  test_presets.py
