[build-system]
requires = ["setuptools>=58", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyDFT"
version = "0.1.0"
description = "Educational density functional theory code with a pywebview frontend"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "pyDFT contributors" }]
dependencies = [
  "numpy>=1.25",
  "scipy>=1.11",
  "fastapi>=0.111",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
frontend = ["pywebview>=5.0"]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[project.scripts]
pydft-cli = "pydft.backend.cli:main"
pydft-api = "pydft.backend.api_server:run"
pydft-webview = "pydft.frontend.app:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pydft.frontend" = ["ui/*.html", "ui/*.css", "ui/*.js"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"
