[build-system]
requires = ["setuptools>=58", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyDFT"
version = "0.1.0"
description = "Educational density functional theory code with a pywebview frontend"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "pyDFT contributors" }]
dependencies = [
  "numpy>=1.25",
  "scipy>=1.11",
  "fastapi>=0.111",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
frontend = ["pywebview>=5.0"]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[project.scripts]
pydft = "pydft.main:main"
pydft-cli = "pydft.cli:main"
pydft-api = "pydft.api.server:run"
pydft-webview = "pydft.gui.window:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pydft.gui" = ["assets/*.html", "assets/*.css", "assets/*.js"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"
